Safe Step 1. Ramez Work.

--- a/Task-API/appsettings.json
+++ b/Task-API/appsettings.json
@@ -1,8 +1,15 @@
 {
+  "AppSetting":{
+    "Token":"P@$$W0RDHereRamez"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ConnectionForMe": "Server=.;Database=TaskAPI;Trusted_connection=True;"
+  }
 }
+
